--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -38,6 +38,11 @@
     line-height: 22px;
 }
 
+.rightNav .user img {
+    height: 40px;
+    border-radius: 50px;
+}
+
 .nav .navLinks ul {
     display: flex;
     list-style-type: none;
